website/versioned_docs/version-6.12.2/api/options-backButton.mdx
---
id: options-backButton
title: Back Button Options
sidebar_label: Back Button
---

Controls the back button styling.

```js
const options = {
  topBar: {
    backButton: {},
  },
};
```

## `accessibilityLabel`

Overrides the text that's read by the screen reader when the user interacts with the back button.

| Type   | Required | Platform |
| ------ | -------- | -------- |
| string | No       | Android  |

### `id`

Button id for reference press event.

| Type   | Required | Platform |
| ------ | -------- | -------- |
| string | No       | Android  |

### `color`

Change the back button color. This will change the text color as well.

| Type  | Required | Platform |
| ----- | -------- | -------- |
| color | No       | Both     |

### `icon`

Change the default back button icon.

| Type   | Required | Platform |
| ------ | -------- | -------- |
| number | No       | Both     |

### `showTitle`

Show or hide the text displayed next to the back button.

| Type   | Required | Platform |
| ------ | -------- | -------- |
| number | No       | iOS      |

### `title`

Change the text displayed next to the title. Usually the back button shows the title of the previous screen.

| Type   | Required | Platform |
| ------ | -------- | -------- |
| string | No       | iOS      |

### `visible`

Hide or show the back button.

| Type    | Required | Platform |
| ------- | -------- | -------- |
| boolean | No       | Both     |

### `testID`

Used to interact with the back button in e2e tests.

| Type   | Required | Platform |
| ------ | -------- | -------- |
| string | No       | Both     |
